@@ -6,10 +6,24 @@ use strict;
 use IkiWiki 2.00;
 
 sub import { #{{{
+	hook(type => "getsetup", id => "lockedit", call => \&getsetup);
 	hook(type => "canedit", id => "lockedit", call => \&canedit);
 	hook(type => "formbuilder_setup", id => "lockedit",
 	     call => \&formbuilder_setup);
 } # }}}
+
+sub getsetup () { #{{{
+	return
+		locked_pages => {
+			type => "string",
+			example => "!*/Discussion",
+			description => "PageSpec controlling which pages are locked",
+			description_html => htmllink("", "", "ikiwiki/PageSpec", noimageinline => 1).
+				" controlling which pages are locked",
+			safe => 1,
+			rebuild => 0,
+		},
+} #}}}
 
 sub canedit ($$) { #{{{
 	my $page=shift;
@@ -19,6 +33,20 @@ sub canedit ($$) { #{{{
 	my $user=$session->param("name");
 	return undef if defined $user && IkiWiki::is_admin($user);
 
+	if (defined $config{locked_pages} && length $config{locked_pages} &&
+	    pagespec_match($page, $config{locked_pages})) {
+		if (! defined $user ||
+		    ! IkiWiki::userinfo_get($session->param("name"), "regdate")) {
+			return sub { IkiWiki::needsignin($cgi, $session) };
+		}
+		else {
+			return sprintf(gettext("%s is locked and cannot be edited"),
+				htmllink("", "", $page, noimageinline => 1));
+			
+		}
+	}
+
+	# XXX deprecated, should be removed eventually
 	foreach my $admin (@{$config{adminuser}}) {
 		if (pagespec_match($page, IkiWiki::userinfo_get($admin, "locked_pages"))) {
 			if (! defined $user ||
@@ -26,9 +54,8 @@ sub canedit ($$) { #{{{
 				return sub { IkiWiki::needsignin($cgi, $session) };
 			}
 			else {
-				return sprintf(gettext("%s is locked by %s and cannot be edited"),
-					htmllink("", "", $page, noimageinline => 1),
-					IkiWiki::userlink($admin));
+				return sprintf(gettext("%s is locked and cannot be edited"),
+					htmllink("", "", $page, noimageinline => 1));
 			}
 		}
 	}
@@ -38,7 +65,8 @@ sub canedit ($$) { #{{{
 
 sub formbuilder_setup (@) { #{{{
 	my %params=@_;
-	
+
+	# XXX deprecated, should be removed eventually	
 	my $form=$params{form};
 	if ($form->title eq "preferences") {
 		my $session=$params{session};
@@ -47,13 +75,19 @@ sub formbuilder_setup (@) { #{{{
 
 		$form->field(name => "locked_pages", size => 50,
 			fieldset => "admin",
-			comment => "(".htmllink("", "", "ikiwiki/PageSpec", noimageinline => 1).")");
+			comment => "deprecated; please move to locked_pages in setup file"
+		);
 		if (! IkiWiki::is_admin($user_name)) {
 			$form->field(name => "locked_pages", type => "hidden");
 		}
 		if (! $form->submitted) {
-			$form->field(name => "locked_pages", force => 1,
-				value => IkiWiki::userinfo_get($user_name, "locked_pages"));
+			my $value=IkiWiki::userinfo_get($user_name, "locked_pages");
+			if (length $value) {
+				$form->field(name => "locked_pages", force => 1, value => $value);
+			}
+			else {
+				$form->field(name => "locked_pages", type => "hidden");
+			}
 		}
 		if ($form->submitted && $form->submitted eq 'Save Preferences') {
 			if (defined $form->field("locked_pages")) {
