@@ -39,21 +39,20 @@ backwards compatability.
 
 # 3.0
 
-Still in the early planning stages, version 3.0 will be an opportunity to
-make significant transitions.
+Version 3.0 will be an opportunity to make significant transitions.
 
 * Default to using `prefix_directives`.
 * Default to using `aggregateinternal`.
+* Remove deprecated prefs form settings for `allowed_attachments` and
+  `locked_pages`.
 
 ----
 
 # future goals
 
-* Improved [[todo/html]] stylesheets and templates.
-  _(status: [[css_market]] exists; it could always provide more stylesheets.  No alternate templates yet, though.)_
-* More documentation in the basewiki, including documentation for all enabled plugins.  Probably need some solution for [[todo/conditional_underlay_files]], too.
+* More documentation in the basewiki, including documentation for all enabled plugins.
 * Conversion support for existing other wikis.
   (Being worked on for MoinMoin and TWiki by [[Josh_Triplett|JoshTriplett]]
   and Jamey Sharp; support for other wikis should fit into the same
   framework.)
-* [[TODO]], [[bugs]], [[soc]], ...
+* [[TODO]], [[bugs]], ...
